# FirstVulkanEngine

./: .gitignore  CMakeLists.txt  readme.md
shaders/: colored_triangle.frag  colored_triangle.vert  tri_mesh.vert  triangle.frag  triangle.vert
src/: CMakeLists.txt  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_types.h
